--- a/css/style.css
+++ b/css/style.css
@@ -29,7 +29,7 @@ body {
 	height: 100%;
 	position: absolute;
 	transform-style: preserve-3d;
-	transition: transform 1s cubic-bezier(0.1, 0.72, 0.64, 1.01);
+	transition: transform .7s cubic-bezier(0.1, 0.72, 0.64, 1.01);
 	transform-origin: right center;
 }
 
