--- a/css/style.css
+++ b/css/style.css
@@ -8,10 +8,10 @@ body {
 
 body {
 	background-color: #444;
-	display: flex;
+	/* display: flex;
 	align-items: center;
-	justify-content: center;
-	perspective: 300px;
+	justify-content: center; */
+	/* perspective: 300px; */
 	color: #e2e2e2;
 	font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
@@ -50,3 +50,44 @@ body {
 .card.flipped {
 	transform: translateX(-100%) rotateY(-180deg);
 }
+
+
+.cube-container {
+	width: 1000px;
+	height: 123px;
+	position: relative;
+	perspective: 1000px;
+}
+
+.cube {
+	width: 100%;
+	height: 100%;
+	position: absolute;
+	transform-style: preserve-3d;
+	transform: translateZ(-100px);
+	transition: transform 1s;
+	cursor: pointer;
+}
+
+.cube img {
+	margin: 0;
+	display: block;
+	border: 2px solid black;
+	position: absolute;
+	backface-visibility: hidden;
+	width: 100%;
+}
+
+.cube .front { transform: rotateY(0deg) translateZ(61px) }
+.cube .back { transform: rotateX(180deg) translateZ(61px)}
+.cube .right { transform: rotateY(90deg) translateZ(61px)}
+.cube .left { transform: rotateY(-90deg) translateZ(61px)}
+.cube .top { transform: rotateX(90deg) translateZ(61px)}
+.cube .bottom { transform: rotateX(-90deg) translateZ(61px)}
+
+.cube.show-front  { transform: translateZ( -100px ) rotateY(    0deg ); }
+.cube.show-back   { transform: translateZ( -100px ) rotateX( 180deg ); }
+.cube.show-right  { transform: translateZ( -100px ) rotateY(  -90deg ); }
+.cube.show-left   { transform: translateZ( -100px ) rotateY(   90deg ); }
+.cube.show-top    { transform: translateZ( -100px ) rotateX(  -90deg ); }
+.cube.show-bottom { transform: translateZ( -100px ) rotateX(   90deg ); }
