--- a/css/style.css
+++ b/css/style.css
@@ -91,3 +91,49 @@ body {
 .cube.show-left   { transform: translateZ( -100px ) rotateY(   90deg ); }
 .cube.show-top    { transform: translateZ( -100px ) rotateX(  -90deg ); }
 .cube.show-bottom { transform: translateZ( -100px ) rotateX(   90deg ); }
+
+.text-logo {
+	font-size: 10em;
+	line-height: 1;
+	outline: none;
+	text-decoration: none;
+	position: relative;
+	display: inline-block;
+	color: #F36005;
+	font-weight: bold;
+
+	overflow: hidden;
+}
+
+.text-logo::after {
+	content: '';
+	position: absolute;
+	height: 16px;
+	width: 100%;
+	top: 50%;
+	margin-top: -8px;
+	right: 0;
+	background: seashell;
+	transform: translate3d(-100%, 0, 0);
+	transition: transform 1.2s cubic-bezier(0.7, 0, 0.3, 1);
+}
+
+.text-logo:hover::after {
+	transform: translate3d(100%, 0, 0);
+}
+
+.text-logo::before {
+	content: attr(data-letters);
+	position: absolute;
+	z-index: 2;
+	top: 0;
+	width: 0;
+	white-space: nowrap;
+	overflow: hidden;
+	color: seashell;
+	transition: width .8s .5s cubic-bezier(0.7, 0, 0.3, 1);
+}
+
+.text-logo:hover::before {
+	width: 100%;
+}
